# git-branch-deleter

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: CI.yml  Release.yml
scripts/: cargo-clippy.sh  run-ci-locally.sh
src/: main.rs
