[package]
edition = "2021"
name = "git-branch-deleter"
version = "0.1.11"
description = "Delete local git branches comfortably with a minimalistic TUI"
homepage = "https://github.com/git-branch-deleter/git-branch-deleter"
documentation = "https://docs.rs/git-branch-deleter"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
repository = "https://github.com/Enselic/git-branch-deleter"

[dependencies]
termion = "3.0.0"
